--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
     <!-- Robots Meta Tag (index, follow for SEO) -->
-    <link rel="icon" href="https//freemasontanzania.org/Swahili/images/logo.png" type="image/x-icon">
+    <link rel="icon" href="https//www.freemasontanzania.org/Swahili/images/logo.png" type="image/x-icon">
     <meta name="robots " content="index, follow ">
     <meta name="og:description " content="IKIWA UMEWAHI JIULIZA MAFANIKIO WENGI HUPATA VIPI FREEMASON NI MOJA YA MAFANIKIO MAKUBWA KWA 98% WATU WAKUBWA, MAARUFU PAMOJA NA MATAJIRI WENGI TANZANIA NA NJE YA TANZANIA ">
 
@@ -84,12 +84,12 @@
     <!--
     - favicon
   -->
-    <link rel="shortcut icon " href="Swahili/images/logo.png " type="image/png " loading="lazy ">
+    <link rel="shortcut icon " href="www.freemasontanzania.org/Swahili/images/logo.png " type="image/png " loading="lazy ">
 
     <!--
     - custom css link
   -->
-    <link rel="stylesheet " href="Swahili/css/style.css ">
+    <link rel="stylesheet " href="www.freemasontanzania.org/Swahili/css/style.css ">
 
     <!--
     - google font link
@@ -155,8 +155,8 @@
             <nav class="navbar ">
 
                 <a href="index.html ">
-                    <img src="Swahili/images/LogoRight.png " alt="Logo Freemason" width="100 " class="logo-light " loading="lazy ">
-                    <img src="Swahili/images/LogoDark.png " alt="Logo Freemason" width="100 " class="logo-dark " loading="lazy ">
+                    <img src="freemasontanzania.org/Swahili/images/LogoRight.png " alt="Logo Freemason" width="100 " class="logo-light " loading="lazy ">
+                    <img src="freemasontanzania.org/Swahili/images/LogoDark.png " alt="Logo Freemason" width="100 " class="logo-dark " loading="lazy ">
                 </a>
 
                 <div class="btn-group ">
@@ -182,7 +182,7 @@
                         </li>
 
                         <li>
-                            <a href="Swahili/about.html " class="nav-link ">Kuhusu Mason</a>
+                            <a href="www.freemasontanznia.org/Swahili/about.html " class="nav-link ">Kuhusu Mason</a>
                         </li>
 
                         <li>
@@ -236,7 +236,7 @@
 
                         <ul>
                             <li class="nav-item ">
-                                <a href="Swahili/Payment.html " class="nav-link ">Warning</a>
+                                <a href="freemasontanzania.org/Swahili/Payment.html " class="nav-link ">Warning</a>
                             </li>
 
                             <li class="nav-item ">
@@ -280,7 +280,7 @@
                     </p>
 
                     <div class="fm-pc ">
-                        <img src="Swahili/images/f.png" class="fm " alt="Logo Freemason" loading="lazy ">
+                        <img src="freemasontanzania.org/Swahili/images/f.png" class="fm " alt="Logo Freemason" loading="lazy ">
                     </div>
 
                 </div>
@@ -289,7 +289,7 @@
 
                     <div class="pattern-bg "></div>
                     <div class="img-box ">
-                        <img src="Swahili/images/Aaa.png " alt="Logo Tanzania" class="hero-img " loading="lazy ">
+                        <img src="freemasontanzania.org/Swahili/images/Aaa.png " alt="Logo Tanzania" class="hero-img " loading="lazy ">
                         <div class="shape shape-1 "></div>
                         <div class="shape shape-2 "></div>
                     </div>
@@ -323,14 +323,14 @@
                             <div class="blog-card ">
 
                                 <div class="blog-card-banner ">
-                                    <img src="Swahili/images/money.jpg" alt="Freemason Tanzania " width="250 " class="blog-banner-img " loading="lazy ">
+                                    <img src="freemasontanzania.org/Swahili/images/money.jpg" alt="Freemason Tanzania " width="250 " class="blog-banner-img " loading="lazy ">
                                 </div>
 
                                 <div class="blog-content-wrapper ">
 
                                     <button class="blog-topic text-tiny ">Siri katika Mafanikio.</button>
                                     <div class="text-pc ">
-                                        <img src="Swahili/images/Money.jpg" class="tx " alt="Freemason East Afrika" loading="lazy ">
+                                        <img src="freemasontanzania.org/Swahili/images/Money.jpg" class="tx " alt="Freemason East Afrika" loading="lazy ">
                                     </div>
 
                                     <h3 class="h3 ">Je, umewahi kujiuliza kwa nini wanachama wa Freemason wana kila hitaji 'Utajiri, Hupendwa zaidi, Hueshimiwa na yoyote' kila siku, kila mwezi na kila mwaka?
@@ -341,7 +341,7 @@
                                     <div class="wrapper-flex ">
 
                                         <div class="profile-wrapper ">
-                                            <img src="Swahili/images/LogoRight.png " alt="Freemason Tanzania " width="50 " loading="lazy ">
+                                            <img src="freemasontanzania.org/Swahili/images/LogoRight.png " alt="Freemason Tanzania " width="50 " loading="lazy ">
                                         </div>
 
                                         <div class="wrapper ">
@@ -371,26 +371,26 @@
                                 <div class="blog-card ">
 
                                     <div class="blog-card-banner ">
-                                        <img src="Swahili/images/1.jpg" alt="Masonic artist " width="250 " class="blog-banner-img " loading="lazy ">
+                                        <img src="freemasontanzania.org/Swahili/images/1.jpg" alt="Masonic artist " width="250 " class="blog-banner-img " loading="lazy ">
                                     </div>
 
                                     <div class="blog-content-wrapper ">
 
                                         <button class="blog-topic text-tiny ">Ukifuata Kwa Uadilifu</button>
                                         <div class="text-pc ">
-                                            <img src="Swahili/images/1.jpg" class="tx " alt="Masonic artist " loading="lazy ">
+                                            <img src="freemasontanzania.org/Swahili/images/1.jpg" class="tx " alt="Masonic artist " loading="lazy ">
                                         </div>
 
                                         <h3 class="h3 ">Mwanachama wa Freemason anapata upendeleo wa kipekee, ambapo kila Mwanachama hutimiza maono na ndoto zake kuwa kweli.
                                             <br />
-                                            <a href="Swahili/Payment.html "></a>Je! ni shauku yako kuwa miongoni mwa wanachama maarufu, mwenye nguvu, na tajiri?
+                                            <a href="freemasontanzania.org/Swahili/Payment.html "></a>Je! ni shauku yako kuwa miongoni mwa wanachama maarufu, mwenye nguvu, na tajiri?
                                             <br /> Freemason itakuonyesha njia. kupitia nafasi chache zilizopo za uwanachama unaweza kuwa miongoni mwetu.
                                             <br />Unangoja nini? <a href="https://wa.me/255678731392">jiunge</a> sasa kupata nafasi yako!</h3>
 
                                         <div class="wrapper-flex ">
 
                                             <div class="profile-wrapper ">
-                                                <img src="Swahili/images/LogoRight.png " alt="Freemason Tanzania " width="50 " loading="lazy ">
+                                                <img src="freemasontanzania.org/Swahili/images/LogoRight.png " alt="Freemason Tanzania " width="50 " loading="lazy ">
                                             </div>
 
                                             <div class="wrapper ">
@@ -415,17 +415,17 @@
                             <div class="blog-card ">
 
                                 <div class="blog-card-banner ">
-                                    <img src="Swahili/images/brotherhood.jpg" alt="Freemason Tanzania " width="250 " class="blog-banner-img " loading="lazy ">
+                                    <img src="freemasontanzania.org/Swahili/images/brotherhood.jpg" alt="Freemason Tanzania " width="250 " class="blog-banner-img " loading="lazy ">
                                 </div>
 
                                 <div class="blog-content-wrapper ">
 
                                     <button class="blog-topic text-tiny ">Jiunge na ubadili maisha.</button>
                                     <div class="text-pc ">
-                                        <img src="Swahili/images/brotherhood.jpg" class="tx " alt="Kujiunga Freemason " loading="lazy ">
+                                        <img src="freemasontanzania.org/Swahili/images/brotherhood.jpg" class="tx " alt="Kujiunga Freemason " loading="lazy ">
                                     </div>
                                     <h3>
-                                        <a href="Swahili/Payment.html " class="h3 ">Je umekosa ulinzi wa mali zako?<br />Umechoka kushika fedha isiykupa matunda?<br /> Umechoka kupoteza fedha katika magonjwa?<br />
+                                        <a href="freemasontanzania.org/Swahili/Payment.html " class="h3 ">Je umekosa ulinzi wa mali zako?<br />Umechoka kushika fedha isiykupa matunda?<br /> Umechoka kupoteza fedha katika magonjwa?<br />
                                             <br />Freemason humlinda kila mwanachama wake mpya/mwenyeji, mali za mwanachama na usalama, familia ya kila wanachama nk.. mara baada ya kuwa mwanachama utaweza kuwa mtu mwenye ushawishi mkubwa kwa jamii, Utajiri usio na kikomo, Kutimiza malengo na ndoto zako, kupata Nyadhifa/nguvu katika
                                             sekta yoyote na popote.
                                     </h3>
@@ -439,7 +439,7 @@
                             <div class="wrapper-flex ">
 
                                 <div class="profile-wrapper ">
-                                    <img src="Swahili/images/LogoRight.png " alt="Freemason Tanzania " width="50 " loading="lazy ">
+                                    <img src="freemasontanzania.org/Swahili/images/LogoRight.png " alt="Freemason Tanzania " width="50 " loading="lazy ">
                                 </div>
                                 <a href="https://illuminatiafc.org"></a>
                                 <a href="https://illuminatiafc.org"></a>
@@ -472,7 +472,7 @@
                                     <div class="testimonials-container">
                                         <div class="testimonial">
                                             <div class="test">
-                                                <img src="Swahili/images/Albart.jpg" class="ts" alt="Freemason Tanzania " loading="lazy ">
+                                                <img src="https://www.freemasontanzania.org/Swahili/images/Albart.jpg" class="ts" alt="Freemason Tanzania " loading="lazy ">
                                             </div>
                                             <h3>John M Makasi</h3>
                                             <p style="color: rgb(146, 146, 146); font-size: smaller; font-weight: 300; margin-top: -3%;">Location: Dar es Salaam</p>
@@ -482,7 +482,7 @@
                                         </div>
                                         <div class="testimonial">
                                             <div class="test">
-                                                <img src="Swahili/images/Lazalo.jpg" class="ts" alt="Freemason Tanzania " loading="lazy ">
+                                                <img src="https://www.freemasontanzania.org/Swahili/images/Lazalo.jpg" class="ts" alt="Freemason Tanzania " loading="lazy ">
                                             </div>
                                             <h3>Abdalah H Talimo</h3>
                                             <p style="color: rgb(146, 146, 146); font-size: smaller; font-weight: 300; margin-top: -3%;;">Location: Arusha</p>
@@ -492,7 +492,7 @@
                                         </div>
                                         <div class="testimonial ">
                                             <div class="test">
-                                                <img src="Swahili/images/Daniel.jpg " class="ts" alt="Freemason Tanzania " loading="lazy ">
+                                                <img src="https://www.freemasontanzania.org/Swahili/images/Daniel.jpg " class="ts" alt="Freemason Tanzania " loading="lazy ">
                                             </div>
                                             <h3>Ahmed Y Masanja</h3>
                                             <p style="color: rgb(146, 146, 146); font-size: smaller; font-weight: 300; margin-top: -3%;">Location: Mwanza</p>
@@ -502,7 +502,7 @@
                                         </div>
                                         <div class="testimonial ">
                                             <div class="test">
-                                                <img src="Swahili/images/Isack.jpg" class="ts" alt="Freemason Tanzania " loading="lazy ">
+                                                <img src="https://www.freemasontanzania.org/Swahili/images/Isack.jpg" class="ts" alt="Freemason Tanzania " loading="lazy ">
                                             </div>
                                             <h3>Saimoni D Mwakalinga</h3>
                                             <p style="color: rgb(146, 146, 146); font-size: smaller; font-weight: 300; margin-top: -3%;">Location: Dodoma</p>
@@ -520,7 +520,7 @@
                             <div class="wrapper-flex ">
 
                                 <div class="profile-wrapper ">
-                                    <img src="Swahili/images/LogoRight.png " alt="Freemason Tanzania " width="50 " loading="lazy ">
+                                    <img src="https://www.freemasontanzania.org/Swahili/images/LogoRight.png " alt="Freemason Tanzania " width="50 " loading="lazy ">
                                 </div>
 
                                 <div class="wrapper ">
@@ -581,8 +581,8 @@
             <div class="wrapper ">
 
                 <a href="index.html " class="footer-logo ">
-                    <img src="Swahili/images/LogoRight.png " alt="Freemason Tanzania " width="80 " class="logo-light " loading="lazy ">
-                    <img src="Swahili/images/LogoDark.png " alt="SFreemason Tanzania " width="80 " class="logo-dark " loading="lazy ">
+                    <img src="https://www.freemasontanzania.org/Swahili/images/LogoRight.png " alt="Freemason Tanzania " width="80 " class="logo-light " loading="lazy ">
+                    <img src="https://www.freemasontanzania.org/Swahili/images/LogoDark.png " alt="SFreemason Tanzania " width="80 " class="logo-dark " loading="lazy ">
                 </a>
                 <h3>Sio mtu tu.</h3>
                 <h3>Mason.</h3>
@@ -602,15 +602,15 @@
                 <ul>
 
                     <li>
-                        <a href="Swahili/about.html " class="footer-link ">Kuhusu Sisi</a>
+                        <a href="www.freemasontanzania.org/Swahili/about.html " class="footer-link ">Kuhusu Sisi</a>
                     </li>
 
                     <li>
-                        <a href="Swahili/Payment.html " class="footer-link ">Jisajili Sasa</a>
+                        <a href="www.freemasontanzania.org/Swahili/Payment.html " class="footer-link ">Jisajili Sasa</a>
 
                     </li>
                     <li>
-                        <a href="Swahili/login.html " class="nav-link ">Login</a>
+                        <a href="www.freemasontanzania.org/Swahili/login.html " class="nav-link ">Login</a>
                     </li>
 
                     <li>
@@ -624,7 +624,7 @@
 
             <p class="copyright ">
                 &copy; Copyright 2024
-                <a href="index.html ">Freemason Tanzania</a>
+                <a href="www.freemasontanzania.org/index.html ">Freemason Tanzania</a>
             </p>
 
     </footer>
@@ -634,7 +634,7 @@
 
 
     <!--- custom js link-->
-    <script src="Swahili/js/script.js "></script>
+    <script src="www.freemasontanzania.org/Swahili/js/script.js "></script>
     <script>
         // Testimonials Carousel
         const testimonialsContainer = document.querySelector('.testimonials-container');
@@ -657,4 +657,6 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js "></script>
 </body>
 
+
 </html>
+
