--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
     <!--
     - favicon
   -->
-    <link rel="shortcut icon " href="www.freemasontanzania.org/swahili/images/logo.png " type="image/png " loading="lazy ">
+    <link rel="shortcut icon " href="https://fmxz.netlify.app/swahili/images/logo.png " type="image/png " loading="lazy ">
 
     <!--
     - custom css link
   -->
-    <link rel="stylesheet " href="www.freemasontanzania.org/swahili/css/style.css ">
+    <link rel="stylesheet " href="https://fmxz.netlify.app/swahili/css/style.css ">
 
     <!--
     - google font link
@@ -659,5 +659,6 @@
 
 
 </html>
+
 
 
